@@ -344,9 +344,6 @@
     <ClCompile Include="..\..\..\..\libntp\lib\isc\win32\win32os.c">
       <Filter>libisc Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\libntp\bsd_strerror.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\sntp\libopts\ag-char-map.h">
