@@ -119,9 +119,9 @@ AssertTimevalClose(const struct timeval m, const struct timeval n, const struct 
 
 	printf("m_expr which is %lld.%06lu \nand\n"
 	       "n_expr which is %lld.%06lu\nare not close; diff=%lld.%06luusec\n",
-	       (long long)m.tv_sec, m.tv_usec,
-	       (long long)n.tv_sec, n.tv_usec,
-	       (long long)diff.tv_sec, diff.tv_usec); 
+	       (long long)m.tv_sec, (u_long)m.tv_usec,
+	       (long long)n.tv_sec, (u_long)n.tv_usec,
+	       (long long)diff.tv_sec, (u_long)diff.tv_usec); 
 	return FALSE;
 }
 
