@@ -1,5 +1,7 @@
 ---
 
+* [Bug 3903] lib/isc/win32/strerror.c NTstrerror() is not thread-safe.
+             <hart@ntp.org>
 * [Bug 3901] LIB_GETBUF isn't thread-safe. <hart@ntp.org>
 * [Bug 3900] fast_xmit() selects wrong local addr responding to mcast on
              Windows. <hart@ntp.org>
@@ -74,6 +76,7 @@
 * Quiet local addr change logging when unpeering. <hart@ntp.org>
 * Correct missing arg for %s printf specifier in 
   send_blocking_resp_internal(). <hart@ntp.org>
+* Suppress OpenSSL 3 deprecation warning clutter. <hart@ntp.org>
 
 ---
 (4.2.8p17) 2023/06/06 Released by Harlan Stenn <stenn@ntp.org>
